--- a/css/style.css
+++ b/css/style.css
@@ -644,6 +644,12 @@ h3.my-profession{
     color: var(--text-black-700);
     font-weight: 400;
 }
+.contact .contact-info-item p a{
+    font-size: 16px;
+    line-height: 25px;
+    color: var(--text-black-700);
+    font-weight: 400;
+}
 .contact .contact-form{
     flex: 0 0 100%;
     max-width: 100%;
